swiper EffectFade non active img were still visible in the background with opacity light, test fix -> commenting out margin-right

--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -55,7 +55,7 @@
 .swiper-slide {
   display: flex;
   width: 100%;
-  margin-right: 10px;
+  /* margin-right: 10px; */
   justify-content: center;
   align-items: center;
 }
